# mediascribe

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  requirements-dev.txt  requirements-local.txt  requirements.txt  summary.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  asr.md  benchmark-notes.md  local-workspace.md  local-workspace.zh-CN.md  plugin-providers.md  quickstart.md  quickstart.zh-CN.md  summary.md
examples/custom_providers/: README.md  http_webhook_asr_provider.py  mock_asr_provider.py  mock_summary_provider.py  openai_responses_summary_provider.py
mediascribe/: __init__.py  __main__.py  audio_summary_service.py  cli.py  config.py  ffmpeg_utils.py  formatter.py  media_extract_service.py  models.py  runtime.py  scanner.py  subtitle_fetch_service.py  text_summary_service.py  transcription_service.py  video_auth_doctor.py  video_input_service.py  video_models.py  video_summary_service.py  yt_dlp_auth.py
notes/: README.md  development-plan.md  development-plan.zh-CN.md
scripts/: generate_social_preview.py  manual_check_ollama_summary.py
tests/: test_aligner.py  test_azure.py  test_cli.py  test_example_provider_templates.py  test_formatter.py  test_media_extract_service.py  test_provider_discovery.py  test_runtime.py  test_scanner.py  test_subtitle_fetch_service.py  test_summarizer.py  test_summary_service.py  test_text_summary_service.py  test_transcription_service.py  test_video_auth_doctor.py  test_video_input_service.py  test_video_summary_service.py  test_yt_dlp_auth.py
(+27 files in other folders)
